--- a/install
+++ b/install
@@ -59,6 +59,7 @@ fi
 if [[ -n "${CI-}" ]]
 then
   echo "Running in CI -  Working directory level install";
+  echo "Working directory is $(pwd)";
   echo "In order to run - use: .vezuvio/bin/vezuvio";
 
   # shellcheck disable=SC2116
