--- a/install
+++ b/install
@@ -60,10 +60,10 @@ if [[ -n "${CI-}" ]]
 then
   echo "Running in CI -  Working directory level install";
   echo "Working directory is $(pwd)";
-  echo "In order to run - use: ./.vezuvio/bin/vezuvio";
+  echo "In order to run - use: $(pwd)/.vezuvio/bin/vezuvio";
 
   # shellcheck disable=SC2116
-  vezuvioHome=$(echo ./.vezuvio)
+  vezuvioHome=$(echo "$(pwd)"/.vezuvio/bin/vezuvio)
   export VEZUVIO_HOME=$vezuvioHome
 else
   if [ -x /usr/bin/sudo ]; then
