--- a/install
+++ b/install
@@ -40,6 +40,7 @@ unset USE_SOFT_LINK_EMULATION
 unset USE_GRADLE_WRAPPER
 unset USE_INTERACTIVE_ELEVATION
 unset VEZUVIO_HOME
+unset VEZUVIO_HOME_PARENT
 
 
 # default path when you have an Admin rights
@@ -64,6 +65,7 @@ then
   # shellcheck disable=SC2116
   vezuvioHome=$(echo "$(pwd)"/.vezuvio)
   export VEZUVIO_HOME=$vezuvioHome
+  export VEZUVIO_HOME_PARENT=$(echo "$(pwd)")
   echo "In order to run - use: $VEZUVIO_HOME/bin/vezuvio";
 else
   if [ -x /usr/bin/sudo ]; then
@@ -74,6 +76,7 @@ else
       # shellcheck disable=SC2116
         vezuvioHome=$(echo ~/.vezuvio)
         export VEZUVIO_HOME=$vezuvioHome
+        export VEZUVIO_HOME_PARENT=$(echo ~)
   else
       echo "You are not an admin - User level install";
       LOCAL_APPS_PATH=$USABLE_PATHS_HOME_BIN
@@ -81,6 +84,7 @@ else
       # shellcheck disable=SC2116
         vezuvioHome=$(echo ~/.vezuvio)
         export VEZUVIO_HOME=$vezuvioHome
+        export VEZUVIO_HOME_PARENT=$(echo ~)
   fi
 fi
 
@@ -427,7 +431,7 @@ if [[ -n "${USE_INTERACTIVE_ELEVATION-}" ]]
 then
   logTitleL1 'Checking for `sudo` access (may request your password)...'
   [[ "${EUID:-${UID}}" == "0" ]] || have_sudo_access
-elif ! [[ -w "${VEZUVIO_HOME}" ]] &&
+elif ! [[ -w "${VEZUVIO_HOME_PARENT}" ]] &&
      # ! [[ -w "/home" ]] &&
      ! have_sudo_access
 then
