--- a/install
+++ b/install
@@ -48,8 +48,10 @@ USABLE_PATHS_LOCAL_BIN="/usr/local/bin"
 # default path when you have strict office access rights
 # shellcheck disable=SC2116
 USABLE_PATHS_HOME_BIN=$(echo ~/bin)
-
 LOCAL_APPS_PATH=$USABLE_PATHS_LOCAL_BIN
+
+export USABLE_APP_OS_LOCATION=$(echo /opt)
+export USABLE_APP_HOME_LOCATION=$(echo ~)
 
 # OS=Windows_NT
 if [[ "${OS-}" == "Windows_NT" ]]; then
@@ -58,7 +60,9 @@ fi
 
 if [[ -n "${CI-}" ]]
 then
-  echo "Running in CI -  Working directory level install";
+  echo "Running in CI:";
+  echo " - Working directory level install";
+  echo " - Using gradle wrapper";
   echo "Working directory is $(pwd)";
 
   # shellcheck disable=SC2116
@@ -69,22 +73,27 @@ then
   echo "  or, while in current directory, just: ./.vezuvio/bin/vezuvio";
 else
   if [ -x /usr/bin/sudo ]; then
-      echo "You are an admin - OS level install";
+      echo "You are an admin:";
+      echo " - OS level install";
+      echo " - Using gradle wrapper";
       USE_GRADLE_WRAPPER=1
+      LOCAL_APPS_PATH=$USABLE_PATHS_LOCAL_BIN
       USE_INTERACTIVE_ELEVATION=1
 
       # shellcheck disable=SC2116
-        vezuvioHome=$(echo ~/.vezuvio)
+        vezuvioHome=$(echo $USABLE_APP_OS_LOCATION/vezuvio)
         export VEZUVIO_HOME=$vezuvioHome
-        export VEZUVIO_HOME_PARENT=$(echo ~)
+        export VEZUVIO_HOME_PARENT=$USABLE_APP_OS_LOCATION
   else
-      echo "You are not an admin - User level install";
+      echo "You are not an admin:";
+      echo " - User level install";
+      echo " - Using gradle local";
       LOCAL_APPS_PATH=$USABLE_PATHS_HOME_BIN
 
       # shellcheck disable=SC2116
-        vezuvioHome=$(echo ~/.vezuvio)
+        vezuvioHome=$(echo $USABLE_APP_HOME_LOCATION/.vezuvio)
         export VEZUVIO_HOME=$vezuvioHome
-        export VEZUVIO_HOME_PARENT=$(echo ~)
+        export VEZUVIO_HOME_PARENT=$USABLE_APP_HOME_LOCATION
   fi
 fi
 
