fix tray -> vesuvius

--- a/install
+++ b/install
@@ -80,7 +80,7 @@ else
       USE_GRADLE_WRAPPER=1
       # LOCAL_APPS_PATH=$USABLE_PATHS_LOCAL_BIN
       LOCAL_APPS_PATH=$USABLE_PATHS_HOME_BIN
-      USE_INTERACTIVE_ELEVATION=0
+      # USE_INTERACTIVE_ELEVATION=1
 
       # shellcheck disable=SC2116
         # vezuvioHome=$(echo $USABLE_APP_OS_LOCATION/vezuvio)
