fix tray -> vesuvius

--- a/install
+++ b/install
@@ -565,7 +565,7 @@ if [[ -n "${JAVA_HOME-}" ]] && [[ -x "$JAVA_HOME/bin/java" ]]; then
   if [ ! "$JAVA_VER" -ge "$REQUIRED_JAVA_VERSION" ]; then
     abort "Minimum JDK is 17!"
   fi
-  logTitleL1 "Found JDK at ${JAVA_HOME}, version: $(awk -v var1="$JAVA_VER" -v var2=10 'BEGIN { print  ( var1 / var2 ) }')"
+  logTitleL1 " - Found JDK at ${JAVA_HOME}, version: $(awk -v var1="$JAVA_VER" -v var2=10 'BEGIN { print  ( var1 / var2 ) }')"
 else
   abort "JAVA_HOME is not set. JDK is Required"
 fi
@@ -583,7 +583,7 @@ do
     fi
 done
 
-logTitleL1 "This script will install:"
+logTitleL1 " - This script will install:"
 echo "${VEZUVIO_HOME}/*"
 echo "${VEZUVIO_HOME}/bin/*"
 echo "${VEZUVIO_HOME}/etc/*"
