--- a/install
+++ b/install
@@ -668,7 +668,7 @@ cd "$currentDir"
   logTitleL1 "Checking installation result..."
   logTitleL1 " - Executing: 'vezuvio --version'..."
   vuTest --version 1>stdout.tmp;
-  logTitleL1 " - Executing: 'vezuvio --version'...$(cat stdout.tmp)"
+  logTitleL1 " - Executing: 'vezuvio --version'... Success: $(cat stdout.tmp)"
   rm stdout.tmp
 } || {
     abort "Installation check failed!"
